--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,4 +7,6 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link active" routerLink="user" routerLinkActive='active'>User<span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" routerLink="/repo" routerLinkActive='active'>Repositories</a>
-    
+    </div>
+</div>
+</nav>
