--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,1 +1,16 @@
-<p>search works!</p>
+<div class="container">
+
+    <div class="row">
+        <div class="col-sm-2"></div>
+
+        <div class="col-sm-8">
+            <form class="form-inline">
+                <input type="text" class="form-control w-75" placeholder="Enter Username..." name="searchFor" [(ngModel)]="searchFor">
+                <button class="btn btn-success" (click) = "search()"><i class="fa fa-search"></i></button> 
+            </form>
+        </div>
+
+        <div class="col-sm-2"></div>
+    </div>
+
+</div>
