--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,67 @@
-<p>user works!</p>
+<div class="container-fluid">
+
+    <!-- progress loader goes here -->
+    <ng-progress></ng-progress>
+
+    <div class="overlay">
+
+        <!-- search nesting goes here -->
+        <app-search (searchResult) = "search($event)"></app-search> <br>
+
+        <div class="container content">
+
+            <div class="row">
+                <div class="col-sm-4" id="img">
+                    <div class="image">
+                        <div class="card-img-top">
+                            <img src="{{ user.avatar_url }}">
+                        </div>
+                        <div class="card-body">
+                            <span  class="name"><i class="fa fa-user" style="font-size:20px"></i> &nbsp;{{user.login}}</span> &nbsp;
+                            <a href="{{user.html_url}}"><button class="btn btn-success btn-sm"><i class="fa fa-github" style="font-size:20px"></i> &nbsp; <span id="profile">Github</span> </button></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6">
+                    <div class="card" id="info">
+                        <div class="card-body">
+                            <h4 appStrikethrough class="title">Username : <span class="name"> {{ user.login }}</span></h4><hr>
+                            <p><i class="fa fa-file-o" style="font-size:18px"></i> Repositories : <span class="repo-num"> {{ user.public_repos }}</span></p><br>
+                            <p><i class="fa fa-clock-o" style="font-size:18px"></i> Joined : <span class="joined"> {{ user.created_at | dateCount }} </span> </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="text-center" id="repositories">
+            <h2>Repositories</h2>
+        </div>
+
+        <div class="container repositories">
+            <div class="card" id="repo" *ngFor="let repository of repo" style="width: 22rem;">
+                <div class="card-body">
+                    <div class="card-title">
+                        <h5><span class="repo-name">Name:</span> {{ repository.name }} </h5>
+                    </div>
+                    <hr>
+                    <div class="card-text">
+                        <div class="description"><span class="headers">Description :</span> {{ repository.description }} </div><br>
+                        <div class="card-subtitle"><span class="headers">Language :</span> {{ repository.language }} </div><br>
+                        <div class="card-subtitle"><span class="headers">Created :</span> {{ repository.created_at | dateCount }} </div>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <button class="btn btn-outline-primary" id="button-link"><a href="{{repository.html_url}}" class="link">View Repo</a></button>
+                </div>
+            </div>
+        </div>
+        
+    </div>
+</div>
+
+<footer>
+    <p>GIT-SEARCH<BR>2020</p>
+</footer>
