--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -6,6 +6,13 @@
     margin-right: 4%;
 }
 
+.jumbotron{
+   background-color: rgba(231,253,253,0.2);
+    background-size: cover;
+    background-position: top;
+    font-size: 20px;
+}
+
 img{
     width: 70%;
     border-radius: 15px;
@@ -14,14 +21,15 @@ img{
 }
 
 #info{
-    background-color: rgba(255,255,255,0.8);
+    background-color: rgba(0, 0, 0, 0.3);
     margin-top: 2%;
+    color: white;
 }
 
 #repo{
-    background-color: rgba(255,255,255,0.8);
+    background-color: rgba(0, 0, 0, 0.3);
     margin-bottom: 2%;
-    border-radius: 4px;
+    border-radius: 20px;
 }
 
 a{
@@ -47,7 +55,7 @@ a{
 }
 
 #repositories{
-    color: whitesmoke;
+    color: rgb(7, 1, 1);
     margin-bottom: 3%;
 }
 
