--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,14 +1,22 @@
 <div class="container-fluid">
+    <div class="jumbotron text-center">
+        <h1 class="display-3">Welcome to GitHub-Search</h1>       
+        <hr class="my-3">
+        <p>This is a single page application for searching github users and repositories. 
+            The site uses the Github API to perform searches on Github, 
+            and display the results to the users.</p>
+       
+      </div>
 
-    <!-- progress loader goes here -->
     <ng-progress></ng-progress>
 
     <div class="overlay">
 
-        <!-- search nesting goes here -->
-        <app-search (searchResult) = "search($event)"></app-search> <br>
+
+        <app-search (searchResult)="search($event)"></app-search> <br>
 
         <div class="container content">
+                    
 
             <div class="row">
                 <div class="col-sm-4" id="img">
@@ -17,8 +25,11 @@
                             <img src="{{ user.avatar_url }}">
                         </div>
                         <div class="card-body">
-                            <span  class="name"><i class="fa fa-user" style="font-size:20px"></i> &nbsp;{{user.login}}</span> &nbsp;
-                            <a href="{{user.html_url}}"><button class="btn btn-success btn-sm"><i class="fa fa-github" style="font-size:20px"></i> &nbsp; <span id="profile">Github</span> </button></a>
+                            <span class="name"><i class="fa fa-user" style="font-size:20px"></i>
+                                &nbsp;{{user.login}}</span> &nbsp;
+                            <a href="{{user.html_url}}"><button class="btn btn-success btn-sm"><i class="fa fa-github"
+                                        style="font-size:20px"></i> &nbsp; <span id="profile">Github</span>
+                                </button></a>
                         </div>
                     </div>
                 </div>
@@ -26,9 +37,13 @@
                 <div class="col-sm-6">
                     <div class="card" id="info">
                         <div class="card-body">
-                            <h4 appStrikethrough class="title">Username : <span class="name"> {{ user.login }}</span></h4><hr>
-                            <p><i class="fa fa-file-o" style="font-size:18px"></i> Repositories : <span class="repo-num"> {{ user.public_repos }}</span></p><br>
-                            <p><i class="fa fa-clock-o" style="font-size:18px"></i> Joined : <span class="joined"> {{ user.created_at | dateCount }} </span> </p>
+                            <h4 appStrikethrough class="title">Username : <span class="name"> {{ user.login }}</span>
+                            </h4>
+                            <hr>
+                            <p><i class="fa fa-file-o" style="font-size:18px"></i> Repositories : <span
+                                    class="repo-num"> {{ user.public_repos }}</span></p><br>
+                            <p><i class="fa fa-clock-o" style="font-size:18px"></i> Joined : <span class="joined">
+                                    {{ user.created_at | dateCount }} </span> </p>
                         </div>
                     </div>
                 </div>
@@ -42,26 +57,30 @@
 
         <div class="container repositories">
             <div class="card" id="repo" *ngFor="let repository of repo" style="width: 22rem;">
-                <div class="card-body">
+                <div class="card-body text-white">
                     <div class="card-title">
                         <h5><span class="repo-name">Name:</span> {{ repository.name }} </h5>
                     </div>
                     <hr>
                     <div class="card-text">
-                        <div class="description"><span class="headers">Description :</span> {{ repository.description }} </div><br>
-                        <div class="card-subtitle"><span class="headers">Language :</span> {{ repository.language }} </div><br>
-                        <div class="card-subtitle"><span class="headers">Created :</span> {{ repository.created_at | dateCount }} </div>
+                        <div class="description"><span class="headers">Description :</span> {{ repository.description }}
+                        </div><br>
+                        <div class="card-subtitle"><span class="headers">Language :</span> {{ repository.language }}
+                        </div><br>
+                        <div class="card-subtitle"><span class="headers">Created :</span>
+                            {{ repository.created_at | dateCount }} </div>
                     </div>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-outline-primary" id="button-link"><a href="{{repository.html_url}}" class="link">View Repo</a></button>
+                    <button class="btn btn-outline-primary" id="button-link"><a href="{{repository.html_url}}"
+                            class="link">View Repo</a></button>
                 </div>
             </div>
         </div>
-        
+
     </div>
 </div>
 
 <footer>
-    <p>GIT-SEARCH<BR>2020</p>
+    <p>GITHUB-SEARCH<BR>2020</p>
 </footer>
